[project]
name = "agent-command"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.5.6",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.24",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.52",
    "langchain-deepseek>=1.0.1",
    "langchain-openrouter>=0.2.3",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "langgraph-cli[inmem]>=0.4.24",
]
